# bazel-c-demo

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE
include/: risk.h
src/: risk.c
tests/: BUILD.bazel  game_test.cpp
tests/helpers/: BUILD.bazel  mock_malloc.c  mock_malloc.h
tests/malloc_mock/: black_ops.c  black_ops.h
